kustomize/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haigpt
spec:
  selector:
    matchLabels:
      app: haigpt
  replicas: 3
  template:
    metadata:
      labels:
        app: haigpt
    spec:
      containers:
        - name: haigpt
          image: haigpt.azurecr.io/haigpt:latest
          volumeMounts:
            - name: config-volume
              mountPath: /app/config.json
              subPath: config.json
      volumes:
        - name: config-volume
          configMap:
            name: haigpt
            items:
              - key: config.json
                path: config.json
