kustomize/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: haigpt
  labels:
    app: haigpt
spec:
  type: ClusterIP
  selector:
    app: haigpt
  ports:
    - protocol: TCP
      port: 80
      name: http
      targetPort: 8080
