kustomize/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: ingress-haigpt
spec:
  rules:
    - host: $(DOMAIN)
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: haigpt
                port:
                  number: 80
  tls:
    - hosts:
        - $(DOMAIN)
      secretName: ssl-haigpt
